add api for retrieve metadata (#10)
